--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,11 +7,9 @@
   "author": "Utsav",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "execa": "^4.1.0",
-    "express": "^4.17.1",
-    "react": "^17.0.1",
-    "socket.io": "^4.1.2"
+    "express": "^4.17.2",
+    "node-pty": "^0.10.1",
+    "socket.io": "^4.4.1"
   }
 }
