--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "socket.io-client": "^4.1.2",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "xterm": "^4.16.0"
   },
   "scripts": {
     "start": "react-scripts start",
